Fix zoom level on floating message mismatch with other places

BUG: 429569
(cherry picked from commit ba89aa33d5d1e934da9842570197cb0893da5188)